# AIMemEnrollment

./: .gitignore  LICENSE  README.md  recreate_collection.py  verify_vector_fix.py
backend/ai-membership-enrollment/: .env.example  check_collection.py  pyproject.toml  recreate_collection.py
backend/ai-membership-enrollment/app/: main.py
backend/ai-membership-enrollment/app/database/: qdrant_client.py
backend/ai-membership-enrollment/app/models/: enrollment.py
backend/ai-membership-enrollment/app/schemas/: enrollment.py
backend/ai-membership-enrollment/app/services/: openai_service.py  pdf_service.py  pii_service.py  zendesk_service.py
backend/ai-membership-enrollment/app/workflows/: enrollment_workflow.py
docs/: API.md  DEPLOYMENT.md  FEATURE_LIST.md  QDRANT_SCHEMA.md  TECHNICAL_DESIGN.md
frontend/ai-membership-enrollment-ui/: index.html  package.json
frontend/ai-membership-enrollment-ui/src/: App.tsx
frontend/ai-membership-enrollment-ui/src/components/: ChatInterface.tsx  Navigation.tsx  PDFDownload.tsx  TicketSummary.tsx  ZendeskTickets.tsx  ZendeskUpload.tsx
frontend/ai-membership-enrollment-ui/src/pages/: EnrollmentPage.tsx  HomePage.tsx  ZendeskPage.tsx
frontend/ai-membership-enrollment-ui/src/services/: api.ts
frontend/ai-membership-enrollment-ui/src/types/: index.ts
scripts/: deploy.sh  sample_zendesk_data.json  test_api.py
