[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
langgraph = "^0.2.34"
langchain = "^0.3.7"
langchain-openai = "^0.2.8"
qdrant-client = "^1.12.1"
presidio-analyzer = "^2.2.355"
presidio-anonymizer = "^2.2.355"
pdfkit = "^1.0.0"
python-dotenv = "^1.0.1"
pydantic = "^2.10.3"
httpx = "^0.28.1"
langsmith = "^0.1.147"
python-multipart = "^0.0.18"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
